--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-repo",
+  "name": "galactic-age-calculator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
